@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class Depth {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -54,13 +54,13 @@ public class Depth {
         return Depth.visuals$VH;
     }
     public static MemoryAddress visuals$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)Depth.visuals$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)Depth.visuals$VH.get(seg);
     }
     public static void visuals$set( MemorySegment seg, MemoryAddress x) {
         Depth.visuals$VH.set(seg, x);
     }
     public static MemoryAddress visuals$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)Depth.visuals$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)Depth.visuals$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void visuals$set(MemorySegment seg, long index, MemoryAddress x) {
         Depth.visuals$VH.set(seg.asSlice(index*sizeof()), x);
@@ -70,11 +70,7 @@ public class Depth {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
