@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class XICCallback {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -21,13 +21,13 @@ public class XICCallback {
         return XICCallback.client_data$VH;
     }
     public static MemoryAddress client_data$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)XICCallback.client_data$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)XICCallback.client_data$VH.get(seg);
     }
     public static void client_data$set( MemorySegment seg, MemoryAddress x) {
         XICCallback.client_data$VH.set(seg, x);
     }
     public static MemoryAddress client_data$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)XICCallback.client_data$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)XICCallback.client_data$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void client_data$set(MemorySegment seg, long index, MemoryAddress x) {
         XICCallback.client_data$VH.set(seg.asSlice(index*sizeof()), x);
@@ -37,30 +37,26 @@ public class XICCallback {
         return XICCallback.callback$VH;
     }
     public static MemoryAddress callback$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)XICCallback.callback$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)XICCallback.callback$VH.get(seg);
     }
     public static void callback$set( MemorySegment seg, MemoryAddress x) {
         XICCallback.callback$VH.set(seg, x);
     }
     public static MemoryAddress callback$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)XICCallback.callback$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)XICCallback.callback$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void callback$set(MemorySegment seg, long index, MemoryAddress x) {
         XICCallback.callback$VH.set(seg.asSlice(index*sizeof()), x);
     }
-    public static XICProc callback (MemorySegment segment, ResourceScope scope) {
-        return XICProc.ofAddress(callback$get(segment), scope);
+    public static XICProc callback (MemorySegment segment, MemorySession session) {
+        return XICProc.ofAddress(callback$get(segment), session);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
