@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class XOMFontInfo {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -39,13 +39,13 @@ public class XOMFontInfo {
         return XOMFontInfo.font_struct_list$VH;
     }
     public static MemoryAddress font_struct_list$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)XOMFontInfo.font_struct_list$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)XOMFontInfo.font_struct_list$VH.get(seg);
     }
     public static void font_struct_list$set( MemorySegment seg, MemoryAddress x) {
         XOMFontInfo.font_struct_list$VH.set(seg, x);
     }
     public static MemoryAddress font_struct_list$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)XOMFontInfo.font_struct_list$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)XOMFontInfo.font_struct_list$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void font_struct_list$set(MemorySegment seg, long index, MemoryAddress x) {
         XOMFontInfo.font_struct_list$VH.set(seg.asSlice(index*sizeof()), x);
@@ -55,13 +55,13 @@ public class XOMFontInfo {
         return XOMFontInfo.font_name_list$VH;
     }
     public static MemoryAddress font_name_list$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)XOMFontInfo.font_name_list$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)XOMFontInfo.font_name_list$VH.get(seg);
     }
     public static void font_name_list$set( MemorySegment seg, MemoryAddress x) {
         XOMFontInfo.font_name_list$VH.set(seg, x);
     }
     public static MemoryAddress font_name_list$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)XOMFontInfo.font_name_list$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)XOMFontInfo.font_name_list$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void font_name_list$set(MemorySegment seg, long index, MemoryAddress x) {
         XOMFontInfo.font_name_list$VH.set(seg.asSlice(index*sizeof()), x);
@@ -71,11 +71,7 @@ public class XOMFontInfo {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
