@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class XPointerMovedEvent {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -86,13 +86,13 @@ public class XPointerMovedEvent {
         return XPointerMovedEvent.display$VH;
     }
     public static MemoryAddress display$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)XPointerMovedEvent.display$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)XPointerMovedEvent.display$VH.get(seg);
     }
     public static void display$set( MemorySegment seg, MemoryAddress x) {
         XPointerMovedEvent.display$VH.set(seg, x);
     }
     public static MemoryAddress display$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)XPointerMovedEvent.display$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)XPointerMovedEvent.display$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void display$set(MemorySegment seg, long index, MemoryAddress x) {
         XPointerMovedEvent.display$VH.set(seg.asSlice(index*sizeof()), x);
@@ -278,11 +278,7 @@ public class XPointerMovedEvent {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
