@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class XWindowAttributes {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -140,13 +140,13 @@ public class XWindowAttributes {
         return XWindowAttributes.visual$VH;
     }
     public static MemoryAddress visual$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)XWindowAttributes.visual$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)XWindowAttributes.visual$VH.get(seg);
     }
     public static void visual$set( MemorySegment seg, MemoryAddress x) {
         XWindowAttributes.visual$VH.set(seg, x);
     }
     public static MemoryAddress visual$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)XWindowAttributes.visual$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)XWindowAttributes.visual$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void visual$set(MemorySegment seg, long index, MemoryAddress x) {
         XWindowAttributes.visual$VH.set(seg.asSlice(index*sizeof()), x);
@@ -396,13 +396,13 @@ public class XWindowAttributes {
         return XWindowAttributes.screen$VH;
     }
     public static MemoryAddress screen$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)XWindowAttributes.screen$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)XWindowAttributes.screen$VH.get(seg);
     }
     public static void screen$set( MemorySegment seg, MemoryAddress x) {
         XWindowAttributes.screen$VH.set(seg, x);
     }
     public static MemoryAddress screen$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)XWindowAttributes.screen$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)XWindowAttributes.screen$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void screen$set(MemorySegment seg, long index, MemoryAddress x) {
         XWindowAttributes.screen$VH.set(seg.asSlice(index*sizeof()), x);
@@ -412,11 +412,7 @@ public class XWindowAttributes {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
