@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class _XIMStatusDrawCallbackStruct {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -50,13 +50,13 @@ public class _XIMStatusDrawCallbackStruct {
             return data.text$VH;
         }
         public static MemoryAddress text$get(MemorySegment seg) {
-            return (jdk.incubator.foreign.MemoryAddress)data.text$VH.get(seg);
+            return (java.lang.foreign.MemoryAddress)data.text$VH.get(seg);
         }
         public static void text$set( MemorySegment seg, MemoryAddress x) {
             data.text$VH.set(seg, x);
         }
         public static MemoryAddress text$get(MemorySegment seg, long index) {
-            return (jdk.incubator.foreign.MemoryAddress)data.text$VH.get(seg.asSlice(index*sizeof()));
+            return (java.lang.foreign.MemoryAddress)data.text$VH.get(seg.asSlice(index*sizeof()));
         }
         public static void text$set(MemorySegment seg, long index, MemoryAddress x) {
             data.text$VH.set(seg.asSlice(index*sizeof()), x);
@@ -82,11 +82,7 @@ public class _XIMStatusDrawCallbackStruct {
         public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
             return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
         }
-        public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-        public static MemorySegment allocateArray(int len, ResourceScope scope) {
-            return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-        }
-        public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+        public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
     }
 
     public static MemorySegment data$slice(MemorySegment seg) {
@@ -97,11 +93,7 @@ public class _XIMStatusDrawCallbackStruct {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
