@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class _XIMStringConversionCallbackStruct {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -90,13 +90,13 @@ public class _XIMStringConversionCallbackStruct {
         return _XIMStringConversionCallbackStruct.text$VH;
     }
     public static MemoryAddress text$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)_XIMStringConversionCallbackStruct.text$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)_XIMStringConversionCallbackStruct.text$VH.get(seg);
     }
     public static void text$set( MemorySegment seg, MemoryAddress x) {
         _XIMStringConversionCallbackStruct.text$VH.set(seg, x);
     }
     public static MemoryAddress text$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)_XIMStringConversionCallbackStruct.text$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)_XIMStringConversionCallbackStruct.text$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void text$set(MemorySegment seg, long index, MemoryAddress x) {
         _XIMStringConversionCallbackStruct.text$VH.set(seg.asSlice(index*sizeof()), x);
@@ -106,11 +106,7 @@ public class _XIMStringConversionCallbackStruct {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
