@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 public class _XIMStringConversionText {
 
     static final  GroupLayout $struct$LAYOUT = MemoryLayout.structLayout(
@@ -44,13 +44,13 @@ public class _XIMStringConversionText {
         return _XIMStringConversionText.feedback$VH;
     }
     public static MemoryAddress feedback$get(MemorySegment seg) {
-        return (jdk.incubator.foreign.MemoryAddress)_XIMStringConversionText.feedback$VH.get(seg);
+        return (java.lang.foreign.MemoryAddress)_XIMStringConversionText.feedback$VH.get(seg);
     }
     public static void feedback$set( MemorySegment seg, MemoryAddress x) {
         _XIMStringConversionText.feedback$VH.set(seg, x);
     }
     public static MemoryAddress feedback$get(MemorySegment seg, long index) {
-        return (jdk.incubator.foreign.MemoryAddress)_XIMStringConversionText.feedback$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemoryAddress)_XIMStringConversionText.feedback$VH.get(seg.asSlice(index*sizeof()));
     }
     public static void feedback$set(MemorySegment seg, long index, MemoryAddress x) {
         _XIMStringConversionText.feedback$VH.set(seg.asSlice(index*sizeof()), x);
@@ -85,13 +85,13 @@ public class _XIMStringConversionText {
             return string.mbs$VH;
         }
         public static MemoryAddress mbs$get(MemorySegment seg) {
-            return (jdk.incubator.foreign.MemoryAddress)string.mbs$VH.get(seg);
+            return (java.lang.foreign.MemoryAddress)string.mbs$VH.get(seg);
         }
         public static void mbs$set( MemorySegment seg, MemoryAddress x) {
             string.mbs$VH.set(seg, x);
         }
         public static MemoryAddress mbs$get(MemorySegment seg, long index) {
-            return (jdk.incubator.foreign.MemoryAddress)string.mbs$VH.get(seg.asSlice(index*sizeof()));
+            return (java.lang.foreign.MemoryAddress)string.mbs$VH.get(seg.asSlice(index*sizeof()));
         }
         public static void mbs$set(MemorySegment seg, long index, MemoryAddress x) {
             string.mbs$VH.set(seg.asSlice(index*sizeof()), x);
@@ -101,13 +101,13 @@ public class _XIMStringConversionText {
             return string.wcs$VH;
         }
         public static MemoryAddress wcs$get(MemorySegment seg) {
-            return (jdk.incubator.foreign.MemoryAddress)string.wcs$VH.get(seg);
+            return (java.lang.foreign.MemoryAddress)string.wcs$VH.get(seg);
         }
         public static void wcs$set( MemorySegment seg, MemoryAddress x) {
             string.wcs$VH.set(seg, x);
         }
         public static MemoryAddress wcs$get(MemorySegment seg, long index) {
-            return (jdk.incubator.foreign.MemoryAddress)string.wcs$VH.get(seg.asSlice(index*sizeof()));
+            return (java.lang.foreign.MemoryAddress)string.wcs$VH.get(seg.asSlice(index*sizeof()));
         }
         public static void wcs$set(MemorySegment seg, long index, MemoryAddress x) {
             string.wcs$VH.set(seg.asSlice(index*sizeof()), x);
@@ -117,11 +117,7 @@ public class _XIMStringConversionText {
         public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
             return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
         }
-        public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-        public static MemorySegment allocateArray(int len, ResourceScope scope) {
-            return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-        }
-        public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+        public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
     }
 
     public static MemorySegment string$slice(MemorySegment seg) {
@@ -132,11 +128,7 @@ public class _XIMStringConversionText {
     public static MemorySegment allocateArray(int len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment allocate(ResourceScope scope) { return allocate(SegmentAllocator.nativeAllocator(scope)); }
-    public static MemorySegment allocateArray(int len, ResourceScope scope) {
-        return allocateArray(len, SegmentAllocator.nativeAllocator(scope));
-    }
-    public static MemorySegment ofAddress(MemoryAddress addr, ResourceScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemoryAddress addr, MemorySession session) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, session); }
 }
 
 
