@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$29 {
 
     static final FunctionDescriptor XDoesSaveUnders$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
@@ -14,14 +14,14 @@ class constants$29 {
     );
     static final MethodHandle XDoesSaveUnders$MH = RuntimeHelper.downcallHandle(
         "XDoesSaveUnders",
-        constants$29.XDoesSaveUnders$FUNC, false
+        constants$29.XDoesSaveUnders$FUNC
     );
     static final FunctionDescriptor XDisableAccessControl$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle XDisableAccessControl$MH = RuntimeHelper.downcallHandle(
         "XDisableAccessControl",
-        constants$29.XDisableAccessControl$FUNC, false
+        constants$29.XDisableAccessControl$FUNC
     );
     static final FunctionDescriptor XDisplayCells$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -29,7 +29,7 @@ class constants$29 {
     );
     static final MethodHandle XDisplayCells$MH = RuntimeHelper.downcallHandle(
         "XDisplayCells",
-        constants$29.XDisplayCells$FUNC, false
+        constants$29.XDisplayCells$FUNC
     );
     static final FunctionDescriptor XDisplayHeight$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -37,7 +37,7 @@ class constants$29 {
     );
     static final MethodHandle XDisplayHeight$MH = RuntimeHelper.downcallHandle(
         "XDisplayHeight",
-        constants$29.XDisplayHeight$FUNC, false
+        constants$29.XDisplayHeight$FUNC
     );
     static final FunctionDescriptor XDisplayHeightMM$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -45,7 +45,7 @@ class constants$29 {
     );
     static final MethodHandle XDisplayHeightMM$MH = RuntimeHelper.downcallHandle(
         "XDisplayHeightMM",
-        constants$29.XDisplayHeightMM$FUNC, false
+        constants$29.XDisplayHeightMM$FUNC
     );
     static final FunctionDescriptor XDisplayKeycodes$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -54,7 +54,7 @@ class constants$29 {
     );
     static final MethodHandle XDisplayKeycodes$MH = RuntimeHelper.downcallHandle(
         "XDisplayKeycodes",
-        constants$29.XDisplayKeycodes$FUNC, false
+        constants$29.XDisplayKeycodes$FUNC
     );
 }
 
