@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$32 {
 
     static final FunctionDescriptor XDrawRectangles$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
@@ -18,7 +18,7 @@ class constants$32 {
     );
     static final MethodHandle XDrawRectangles$MH = RuntimeHelper.downcallHandle(
         "XDrawRectangles",
-        constants$32.XDrawRectangles$FUNC, false
+        constants$32.XDrawRectangles$FUNC
     );
     static final FunctionDescriptor XDrawSegments$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -29,7 +29,7 @@ class constants$32 {
     );
     static final MethodHandle XDrawSegments$MH = RuntimeHelper.downcallHandle(
         "XDrawSegments",
-        constants$32.XDrawSegments$FUNC, false
+        constants$32.XDrawSegments$FUNC
     );
     static final FunctionDescriptor XDrawString$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -42,7 +42,7 @@ class constants$32 {
     );
     static final MethodHandle XDrawString$MH = RuntimeHelper.downcallHandle(
         "XDrawString",
-        constants$32.XDrawString$FUNC, false
+        constants$32.XDrawString$FUNC
     );
     static final FunctionDescriptor XDrawString16$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -55,7 +55,7 @@ class constants$32 {
     );
     static final MethodHandle XDrawString16$MH = RuntimeHelper.downcallHandle(
         "XDrawString16",
-        constants$32.XDrawString16$FUNC, false
+        constants$32.XDrawString16$FUNC
     );
     static final FunctionDescriptor XDrawText$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -68,7 +68,7 @@ class constants$32 {
     );
     static final MethodHandle XDrawText$MH = RuntimeHelper.downcallHandle(
         "XDrawText",
-        constants$32.XDrawText$FUNC, false
+        constants$32.XDrawText$FUNC
     );
     static final FunctionDescriptor XDrawText16$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -81,7 +81,7 @@ class constants$32 {
     );
     static final MethodHandle XDrawText16$MH = RuntimeHelper.downcallHandle(
         "XDrawText16",
-        constants$32.XDrawText16$FUNC, false
+        constants$32.XDrawText16$FUNC
     );
 }
 
