@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$38 {
 
     static final FunctionDescriptor XGetKeyboardControl$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
@@ -15,7 +15,7 @@ class constants$38 {
     );
     static final MethodHandle XGetKeyboardControl$MH = RuntimeHelper.downcallHandle(
         "XGetKeyboardControl",
-        constants$38.XGetKeyboardControl$FUNC, false
+        constants$38.XGetKeyboardControl$FUNC
     );
     static final FunctionDescriptor XGetPointerControl$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -25,7 +25,7 @@ class constants$38 {
     );
     static final MethodHandle XGetPointerControl$MH = RuntimeHelper.downcallHandle(
         "XGetPointerControl",
-        constants$38.XGetPointerControl$FUNC, false
+        constants$38.XGetPointerControl$FUNC
     );
     static final FunctionDescriptor XGetPointerMapping$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -34,7 +34,7 @@ class constants$38 {
     );
     static final MethodHandle XGetPointerMapping$MH = RuntimeHelper.downcallHandle(
         "XGetPointerMapping",
-        constants$38.XGetPointerMapping$FUNC, false
+        constants$38.XGetPointerMapping$FUNC
     );
     static final FunctionDescriptor XGetScreenSaver$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -45,7 +45,7 @@ class constants$38 {
     );
     static final MethodHandle XGetScreenSaver$MH = RuntimeHelper.downcallHandle(
         "XGetScreenSaver",
-        constants$38.XGetScreenSaver$FUNC, false
+        constants$38.XGetScreenSaver$FUNC
     );
     static final FunctionDescriptor XGetTransientForHint$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -54,7 +54,7 @@ class constants$38 {
     );
     static final MethodHandle XGetTransientForHint$MH = RuntimeHelper.downcallHandle(
         "XGetTransientForHint",
-        constants$38.XGetTransientForHint$FUNC, false
+        constants$38.XGetTransientForHint$FUNC
     );
     static final FunctionDescriptor XGetWindowProperty$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -72,7 +72,7 @@ class constants$38 {
     );
     static final MethodHandle XGetWindowProperty$MH = RuntimeHelper.downcallHandle(
         "XGetWindowProperty",
-        constants$38.XGetWindowProperty$FUNC, false
+        constants$38.XGetWindowProperty$FUNC
     );
 }
 
