@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$5 {
 
     static final FunctionDescriptor XFetchBuffer$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
@@ -16,7 +16,7 @@ class constants$5 {
     );
     static final MethodHandle XFetchBuffer$MH = RuntimeHelper.downcallHandle(
         "XFetchBuffer",
-        constants$5.XFetchBuffer$FUNC, false
+        constants$5.XFetchBuffer$FUNC
     );
     static final FunctionDescriptor XGetAtomName$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -24,7 +24,7 @@ class constants$5 {
     );
     static final MethodHandle XGetAtomName$MH = RuntimeHelper.downcallHandle(
         "XGetAtomName",
-        constants$5.XGetAtomName$FUNC, false
+        constants$5.XGetAtomName$FUNC
     );
     static final FunctionDescriptor XGetAtomNames$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -34,7 +34,7 @@ class constants$5 {
     );
     static final MethodHandle XGetAtomNames$MH = RuntimeHelper.downcallHandle(
         "XGetAtomNames",
-        constants$5.XGetAtomNames$FUNC, false
+        constants$5.XGetAtomNames$FUNC
     );
     static final FunctionDescriptor XGetDefault$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -43,21 +43,21 @@ class constants$5 {
     );
     static final MethodHandle XGetDefault$MH = RuntimeHelper.downcallHandle(
         "XGetDefault",
-        constants$5.XGetDefault$FUNC, false
+        constants$5.XGetDefault$FUNC
     );
     static final FunctionDescriptor XDisplayName$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle XDisplayName$MH = RuntimeHelper.downcallHandle(
         "XDisplayName",
-        constants$5.XDisplayName$FUNC, false
+        constants$5.XDisplayName$FUNC
     );
     static final FunctionDescriptor XKeysymToString$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_LONG_LONG$LAYOUT
     );
     static final MethodHandle XKeysymToString$MH = RuntimeHelper.downcallHandle(
         "XKeysymToString",
-        constants$5.XKeysymToString$FUNC, false
+        constants$5.XKeysymToString$FUNC
     );
 }
 
