@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$51 {
 
     static final FunctionDescriptor XSetBackground$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
@@ -16,7 +16,7 @@ class constants$51 {
     );
     static final MethodHandle XSetBackground$MH = RuntimeHelper.downcallHandle(
         "XSetBackground",
-        constants$51.XSetBackground$FUNC, false
+        constants$51.XSetBackground$FUNC
     );
     static final FunctionDescriptor XSetClipMask$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -25,7 +25,7 @@ class constants$51 {
     );
     static final MethodHandle XSetClipMask$MH = RuntimeHelper.downcallHandle(
         "XSetClipMask",
-        constants$51.XSetClipMask$FUNC, false
+        constants$51.XSetClipMask$FUNC
     );
     static final FunctionDescriptor XSetClipOrigin$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -35,7 +35,7 @@ class constants$51 {
     );
     static final MethodHandle XSetClipOrigin$MH = RuntimeHelper.downcallHandle(
         "XSetClipOrigin",
-        constants$51.XSetClipOrigin$FUNC, false
+        constants$51.XSetClipOrigin$FUNC
     );
     static final FunctionDescriptor XSetClipRectangles$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -48,7 +48,7 @@ class constants$51 {
     );
     static final MethodHandle XSetClipRectangles$MH = RuntimeHelper.downcallHandle(
         "XSetClipRectangles",
-        constants$51.XSetClipRectangles$FUNC, false
+        constants$51.XSetClipRectangles$FUNC
     );
     static final FunctionDescriptor XSetCloseDownMode$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -56,7 +56,7 @@ class constants$51 {
     );
     static final MethodHandle XSetCloseDownMode$MH = RuntimeHelper.downcallHandle(
         "XSetCloseDownMode",
-        constants$51.XSetCloseDownMode$FUNC, false
+        constants$51.XSetCloseDownMode$FUNC
     );
     static final FunctionDescriptor XSetCommand$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -66,7 +66,7 @@ class constants$51 {
     );
     static final MethodHandle XSetCommand$MH = RuntimeHelper.downcallHandle(
         "XSetCommand",
-        constants$51.XSetCommand$FUNC, false
+        constants$51.XSetCommand$FUNC
     );
 }
 
