@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$53 {
 
     static final FunctionDescriptor XSetFunction$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
@@ -16,7 +16,7 @@ class constants$53 {
     );
     static final MethodHandle XSetFunction$MH = RuntimeHelper.downcallHandle(
         "XSetFunction",
-        constants$53.XSetFunction$FUNC, false
+        constants$53.XSetFunction$FUNC
     );
     static final FunctionDescriptor XSetGraphicsExposures$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -25,7 +25,7 @@ class constants$53 {
     );
     static final MethodHandle XSetGraphicsExposures$MH = RuntimeHelper.downcallHandle(
         "XSetGraphicsExposures",
-        constants$53.XSetGraphicsExposures$FUNC, false
+        constants$53.XSetGraphicsExposures$FUNC
     );
     static final FunctionDescriptor XSetIconName$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -34,7 +34,7 @@ class constants$53 {
     );
     static final MethodHandle XSetIconName$MH = RuntimeHelper.downcallHandle(
         "XSetIconName",
-        constants$53.XSetIconName$FUNC, false
+        constants$53.XSetIconName$FUNC
     );
     static final FunctionDescriptor XSetInputFocus$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -44,7 +44,7 @@ class constants$53 {
     );
     static final MethodHandle XSetInputFocus$MH = RuntimeHelper.downcallHandle(
         "XSetInputFocus",
-        constants$53.XSetInputFocus$FUNC, false
+        constants$53.XSetInputFocus$FUNC
     );
     static final FunctionDescriptor XSetLineAttributes$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -56,7 +56,7 @@ class constants$53 {
     );
     static final MethodHandle XSetLineAttributes$MH = RuntimeHelper.downcallHandle(
         "XSetLineAttributes",
-        constants$53.XSetLineAttributes$FUNC, false
+        constants$53.XSetLineAttributes$FUNC
     );
     static final FunctionDescriptor XSetModifierMapping$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -64,7 +64,7 @@ class constants$53 {
     );
     static final MethodHandle XSetModifierMapping$MH = RuntimeHelper.downcallHandle(
         "XSetModifierMapping",
-        constants$53.XSetModifierMapping$FUNC, false
+        constants$53.XSetModifierMapping$FUNC
     );
 }
 
