@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$67 {
 
     static final FunctionDescriptor XwcDrawString$FUNC = FunctionDescriptor.ofVoid(
@@ -21,7 +21,7 @@ class constants$67 {
     );
     static final MethodHandle XwcDrawString$MH = RuntimeHelper.downcallHandle(
         "XwcDrawString",
-        constants$67.XwcDrawString$FUNC, false
+        constants$67.XwcDrawString$FUNC
     );
     static final FunctionDescriptor Xutf8DrawString$FUNC = FunctionDescriptor.ofVoid(
         Constants$root.C_POINTER$LAYOUT,
@@ -35,7 +35,7 @@ class constants$67 {
     );
     static final MethodHandle Xutf8DrawString$MH = RuntimeHelper.downcallHandle(
         "Xutf8DrawString",
-        constants$67.Xutf8DrawString$FUNC, false
+        constants$67.Xutf8DrawString$FUNC
     );
     static final FunctionDescriptor XmbDrawImageString$FUNC = FunctionDescriptor.ofVoid(
         Constants$root.C_POINTER$LAYOUT,
@@ -49,7 +49,7 @@ class constants$67 {
     );
     static final MethodHandle XmbDrawImageString$MH = RuntimeHelper.downcallHandle(
         "XmbDrawImageString",
-        constants$67.XmbDrawImageString$FUNC, false
+        constants$67.XmbDrawImageString$FUNC
     );
     static final FunctionDescriptor XwcDrawImageString$FUNC = FunctionDescriptor.ofVoid(
         Constants$root.C_POINTER$LAYOUT,
@@ -63,7 +63,7 @@ class constants$67 {
     );
     static final MethodHandle XwcDrawImageString$MH = RuntimeHelper.downcallHandle(
         "XwcDrawImageString",
-        constants$67.XwcDrawImageString$FUNC, false
+        constants$67.XwcDrawImageString$FUNC
     );
     static final FunctionDescriptor Xutf8DrawImageString$FUNC = FunctionDescriptor.ofVoid(
         Constants$root.C_POINTER$LAYOUT,
@@ -77,7 +77,7 @@ class constants$67 {
     );
     static final MethodHandle Xutf8DrawImageString$MH = RuntimeHelper.downcallHandle(
         "Xutf8DrawImageString",
-        constants$67.Xutf8DrawImageString$FUNC, false
+        constants$67.Xutf8DrawImageString$FUNC
     );
     static final FunctionDescriptor XOpenIM$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -87,7 +87,7 @@ class constants$67 {
     );
     static final MethodHandle XOpenIM$MH = RuntimeHelper.downcallHandle(
         "XOpenIM",
-        constants$67.XOpenIM$FUNC, false
+        constants$67.XOpenIM$FUNC
     );
 }
 
