@@ -5,30 +5,30 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$70 {
 
     static final FunctionDescriptor XSetICValues$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
-    static final MethodHandle XSetICValues$MH = RuntimeHelper.downcallHandle(
+    static final MethodHandle XSetICValues$MH = RuntimeHelper.downcallHandleVariadic(
         "XSetICValues",
-        constants$70.XSetICValues$FUNC, true
+        constants$70.XSetICValues$FUNC
     );
     static final FunctionDescriptor XGetICValues$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
-    static final MethodHandle XGetICValues$MH = RuntimeHelper.downcallHandle(
+    static final MethodHandle XGetICValues$MH = RuntimeHelper.downcallHandleVariadic(
         "XGetICValues",
-        constants$70.XGetICValues$FUNC, true
+        constants$70.XGetICValues$FUNC
     );
     static final FunctionDescriptor XIMOfIC$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT
     );
     static final MethodHandle XIMOfIC$MH = RuntimeHelper.downcallHandle(
         "XIMOfIC",
-        constants$70.XIMOfIC$FUNC, false
+        constants$70.XIMOfIC$FUNC
     );
     static final FunctionDescriptor XFilterEvent$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -36,7 +36,7 @@ class constants$70 {
     );
     static final MethodHandle XFilterEvent$MH = RuntimeHelper.downcallHandle(
         "XFilterEvent",
-        constants$70.XFilterEvent$FUNC, false
+        constants$70.XFilterEvent$FUNC
     );
     static final FunctionDescriptor XmbLookupString$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -48,7 +48,7 @@ class constants$70 {
     );
     static final MethodHandle XmbLookupString$MH = RuntimeHelper.downcallHandle(
         "XmbLookupString",
-        constants$70.XmbLookupString$FUNC, false
+        constants$70.XmbLookupString$FUNC
     );
     static final FunctionDescriptor XwcLookupString$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -60,7 +60,7 @@ class constants$70 {
     );
     static final MethodHandle XwcLookupString$MH = RuntimeHelper.downcallHandle(
         "XwcLookupString",
-        constants$70.XwcLookupString$FUNC, false
+        constants$70.XwcLookupString$FUNC
     );
 }
 
