@@ -5,8 +5,8 @@ package tech.bitey.golpanama.xlib;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.VarHandle;
 import java.nio.ByteOrder;
-import jdk.incubator.foreign.*;
-import static jdk.incubator.foreign.ValueLayout.*;
+import java.lang.foreign.*;
+import static java.lang.foreign.ValueLayout.*;
 class constants$76 {
 
     static final FunctionDescriptor XGetNormalHints$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
@@ -16,7 +16,7 @@ class constants$76 {
     );
     static final MethodHandle XGetNormalHints$MH = RuntimeHelper.downcallHandle(
         "XGetNormalHints",
-        constants$76.XGetNormalHints$FUNC, false
+        constants$76.XGetNormalHints$FUNC
     );
     static final FunctionDescriptor XGetRGBColormaps$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -27,7 +27,7 @@ class constants$76 {
     );
     static final MethodHandle XGetRGBColormaps$MH = RuntimeHelper.downcallHandle(
         "XGetRGBColormaps",
-        constants$76.XGetRGBColormaps$FUNC, false
+        constants$76.XGetRGBColormaps$FUNC
     );
     static final FunctionDescriptor XGetSizeHints$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -37,7 +37,7 @@ class constants$76 {
     );
     static final MethodHandle XGetSizeHints$MH = RuntimeHelper.downcallHandle(
         "XGetSizeHints",
-        constants$76.XGetSizeHints$FUNC, false
+        constants$76.XGetSizeHints$FUNC
     );
     static final FunctionDescriptor XGetStandardColormap$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -47,7 +47,7 @@ class constants$76 {
     );
     static final MethodHandle XGetStandardColormap$MH = RuntimeHelper.downcallHandle(
         "XGetStandardColormap",
-        constants$76.XGetStandardColormap$FUNC, false
+        constants$76.XGetStandardColormap$FUNC
     );
     static final FunctionDescriptor XGetTextProperty$FUNC = FunctionDescriptor.of(Constants$root.C_INT$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -57,7 +57,7 @@ class constants$76 {
     );
     static final MethodHandle XGetTextProperty$MH = RuntimeHelper.downcallHandle(
         "XGetTextProperty",
-        constants$76.XGetTextProperty$FUNC, false
+        constants$76.XGetTextProperty$FUNC
     );
     static final FunctionDescriptor XGetVisualInfo$FUNC = FunctionDescriptor.of(Constants$root.C_POINTER$LAYOUT,
         Constants$root.C_POINTER$LAYOUT,
@@ -67,7 +67,7 @@ class constants$76 {
     );
     static final MethodHandle XGetVisualInfo$MH = RuntimeHelper.downcallHandle(
         "XGetVisualInfo",
-        constants$76.XGetVisualInfo$FUNC, false
+        constants$76.XGetVisualInfo$FUNC
     );
 }
 
